Sat Jul 22 12:05:26 BST 2006 (njh)
----------------------------------
  * clamav-milter:	More consistent use of ReadTimeout in the load balancing
				code

Fri Jul 21 19:18:08 BST 2006 (njh)
----------------------------------
  * libclamav/tnef.c:	Handle trailing newline at the end of winmail.dat,
				bug reported by Menno Smits
				<menno*netboxblue.com>

Thu Jul 20 01:56:10 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Code tidy: more consistent use of in_addr_t

Wed Jul 19 22:50:11 BST 2006 (njh)
----------------------------------
  * libclamav/table.c:	Removed code sanity check that is now invalid since
				a table can now contain deleted nodes

Wed Jul 19 13:55:10 BST 2006 (njh)
----------------------------------
  * libclamav/table.c, clamav-milter:	General tidy

Wed Jul 19 10:42:32 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Use LogClean from clamd.conf, removed --dont-log-clean
			Started to use logg() functions from output.o
			Improved load balancing

Tue Jul 18 17:54:42 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: automatically verify patches created with --diff;
		       new option --verify-cdiff for verification from command
		       line

Tue Jul 18 15:57:33 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Fixed compilation warning messages

Tue Jul 18 09:30:03 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Blacklist: remove IP addresses that have timedout as we
				look them up (previously they were only cleaned in
				the watchdog)

Tue Jul 18 12:54:39 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --diff: detect removal of last lines

Tue Jul 18 01:59:53 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: --diff: algorithm now detects line removals

Mon Jul 17 16:54:05 BST 2006 (njh)
----------------------------------
 * clamav-milter:	Fix compilation error on NetBSD 2.0
