@@ -1,3 +1,7 @@
+Sun Jul 23 10:23:34 BST 2006 (njh)
+----------------------------------
+  * clamav-milter:	Internal mode wasn't correctly logging
+
 Sat Jul 22 12:05:26 BST 2006 (njh)
 ----------------------------------
   * clamav-milter:	More consistent use of ReadTimeout in the load balancing
